# xiaomi-be7000-setup

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  Taskfile.yml  pyproject.toml
.cursor/rules/: combinator-checks.mdc  router-environment.mdc  ssh-router.mdc  versioning.mdc
config/: router.base.yaml  router.example.yaml  router.secrets.example.yaml
src/xiaomi_router/: __init__.py  __main__.py  backup.py  cli.py  config_loader.py  diagnose.py  init_wizard.py  paths.py  pipeline.py  proxy_url_parser.py  render.py  setup_extra.py  smoke.py  ssh_util.py  vless_link.py  xmir_bootstrap.py
templates/: startup.sh.j2
templates/adguardhome/: AdGuardHome.yaml.j2
templates/autorun/: 005-ensure-shell-env.sh.j2  010-start-docker.sh.j2  020-mihomo-routing.sh.j2  020-proxy-routing-mihomo.sh.j2  020-proxy-routing-v2raya.sh.j2  021-v2raya-routing.sh.j2
templates/compose/: docker-compose.yml.j2
templates/mihomo/: config.yaml.j2  mihomo-routing.sh.j2  rollback.sh.j2
templates/routing/: lan-routing.sh.j2  rollback.sh.j2
templates/torrserver/: settings.json.j2
templates/xray/: config.json.j2
