[project]
name = "xiaomi-be7000-setup"
version = "0.6.2"
description = "IaC-конфигуратор Docker-стека и автозапуска для Xiaomi BE7000"
authors = [
    {name = "Semyachkin Vitaly"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "<4.0,>=3.10"
dependencies = [
    "paramiko (>=3.4,<4)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "typer[all] (>=0.12,<0.20)",
    "jinja2 (>=3.1,<4)",
    "cryptography (>=42,<45)",
    "ruamel-yaml (>=0.18,<0.19)",
    "textual (>=8.2.4,<9.0.0)",
]

[project.scripts]
xiaomi-router = "xiaomi_router.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "xiaomi_router", from = "src"}]
